--- a/TFSCodeReviewTool.csproj
+++ b/TFSCodeReviewTool.csproj
@@ -273,9 +273,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeReview.cs" />
-    <Compile Include="CodeReviewComment.cs" />
-    <Compile Include="CodeReviewReportDataSource.cs" />
+    <Compile Include="Models\CodeReview.cs" />
+    <Compile Include="Models\CodeReviewComment.cs" />
+    <Compile Include="ReportDataSources\CodeReviewReportDataSource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -283,6 +283,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="ReportElements\Table.cs" />
+    <Compile Include="Managers\ReportManager.cs" />
+    <Compile Include="Reports\CodeReviewReport.cs" />
+    <Compile Include="Managers\TFSManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -292,6 +296,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.TeamFoundationServer.ExtendedClient.16.170.0\build\Microsoft.TeamFoundationServer.ExtendedClient.targets" Condition="Exists('packages\Microsoft.TeamFoundationServer.ExtendedClient.16.170.0\build\Microsoft.TeamFoundationServer.ExtendedClient.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
