--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Ben.Demystifier" version="0.1.3" targetFramework="net48" />
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
   <package id="HarfBuzzSharp" version="2.6.1.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
